@@ -182,6 +182,11 @@
 			</li>
 		</ul>
 		<p>dependencies from a given project.</p>
+		<ul>
+			<li><span class="label label-success">Added</span>The method 
+				<code>org.eclipse.sirius.business.api.session.Session.getSharedMainDAnalysis()</code> is added to get the DAnalysis that holds data and can be shared in some context such as CDO.
+			</li>
+		</ul>
 		<h4 id="Changesinorg.eclipse.sirius.diagram.ui">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
