@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2013, 2022 THALES GLOBAL SERVICES and others,
+ * Copyright (c) 2013, 2023 THALES GLOBAL SERVICES and others,
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -1542,5 +1542,10 @@ public class DAnalysisSessionImpl extends DAnalysisSessionEObjectImpl implements
             siriusPreferences = new SiriusPreferencesImpl(this);
         }
         return siriusPreferences;
+    }
+
+    @Override
+    public DAnalysis getSharedMainDAnalysis() {
+        return getMainAnalysis();
     }
 }
